--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "watch:sass": "node-sass sass/main.scss css/style.css -w",
     "devserver": "live-server",
-    "start": "npm-run-all --parallel devserver watch:sass ",
+    "start": "parcel index.html --open",
     "compile:sass": "node-sass sass/main.scss css/style.comp.css",
     "concat:css": "concat -o css/style.concat.css css/icon-font.css css/style.comp.css",
     "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.concat.css -o css/style.prefix.css ",
@@ -21,5 +21,8 @@
     "node-sass": "^8.0.0",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^10.1.0"
+  },
+  "dependencies": {
+    "parcel-bundler": "^1.12.5"
   }
 }
