--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     "titleBar.activeForeground": "#F5FDE9"
   },
   "editor.defaultFormatter": "esbenp.prettier-vscode",
- "editor.formatOnSave": true
+"editor.formatOnSave": true,
+"liveServer.settings.port": 5501
 }
